--- a/css/style.css
+++ b/css/style.css
@@ -1,7 +1,55 @@
-/*RESET*/
-* {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-    font-family: Arial, Helvetica, sans-serif;
+body{
+    background-color: lightslategray;
+}
+
+.container{
+    width: 1000px;
+    height: 500px;
+    margin: 200px auto;
+}
+
+.images{
+    width: 100%;
+    height: 100%;
+    position: relative;
+    background-color: black;
+}
+
+.button{
+    background-color: rgba(255, 255, 255, 0.5);
+    width: 30px;
+    height: 30px;
+    line-height: 30px;
+    text-align: center;
+    border-radius: 50%;
+    color: black;
+}
+
+.prev{
+    position: absolute;
+    top: 250px;
+    left: 20px;
+}
+
+.next{
+    position: absolute;
+    top: 250px;
+    right: 20px;
+}
+
+.image img{
+    width: 100%;
+    height: 100%;
+    object-fit: contain;
+}
+
+.image {
+    width: 100%;
+    height: 100%;
+    display: none;
+    
+}
+
+.image.active {
+    display: block;
 }
